@@ -21,7 +21,7 @@
 
 // The version of the application,
 // in MAJOR.MINOR.REVISION format
-#define SIGIL_VERSION ("000.001.002")
+#define SIGIL_VERSION ("000.001.003")
 
 // These enable us to use constants defined
 // in one CPP file to be used in another
